--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-is": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
