updated the live photofeed capture logic to handle all devices and then hosted the demo on hugging face spaces and vercel

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,11 @@
 flask
 flask-cors
-opencv-python
-torch
-torchvision
+gunicorn
+torch --index-url https://download.pytorch.org/whl/cpu
+torchvision --index-url https://download.pytorch.org/whl/cpu
 timm
+opencv-python-headless
+python-dotenv
+groq
 numpy
 requests
