--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.2.0",
     "react-is": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "react-webcam": "^7.2.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
