--- a/.github/workflows/sync_to_hf.yml
+++ b/.github/workflows/sync_to_hf.yml
@@ -22,5 +22,16 @@ jobs:
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
+
+          git lfs install
+          git lfs track "*.pth"
+          git add .gitattributes
+          
+          # Force the large file to be tracked by LFS
+          # (This converts the 70MB file into a tiny pointer file for the upload)
+          git add Backend/*.pth
+          git commit -m "Convert model to LFS" || true
+
+          
           git remote add space https://akshay1306:$HF_TOKEN@huggingface.co/spaces/akshay1306/moodquest-api
           git push --force space main
